# SZU-LearnOS

./: .gitignore  CMakeLists.txt  README.md
exp-1/: CMakeLists.txt  README.md
exp-1/app/: main.cpp  setting_dialog.cpp  setting_dialog.hpp  setting_dialog.ui
exp-1/read_write_manager/: CMakeLists.txt
exp-1/read_write_manager/include/: read_write_manager.hpp
exp-1/read_write_manager/src/: read_write_manager.cpp
utils/: CMakeLists.txt
utils/include/: szu-learnos-utils.hpp
utils/src/: szu-learnos-utils.cpp
